Fix bleeding of nav bar
Fix an issue where the ::before pseudo element needs a parent element with
a background-color. However in the WP theme, that's <body>, and we can't
z-index under it :(

--- a/assets/scss/hacks.scss
+++ b/assets/scss/hacks.scss
@@ -1,23 +1,9 @@
-/*! VF-WP - Main (Sass-compiled) */
-/**
- * Reset page grid when VF container patterns require a wrapping div
- */
-.vfwp-column-reset {
-  grid-column: 1 / -1;
-}
-
-/**
- * Ignore width and height attributes on attachments
- */
-img[class*="attachment"] {
-  width: auto;
-  height: auto;
-}
-
 /*! VF-WP - Hacks (Sass-compiled) */
+
 /**
  * There's no escaping it, sometimes you need workarounds.
  */
+
 /**
  * Fix an issue where the ::before pseudo element needs a parent element with
  * a background-color. However in the WP theme, that's <body>, and we can't
